Update env example and README.md

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,9 @@
+# ---------------------------------------------------------------------
+# This is the .env for the project.
+# You can comment on the line you want to use the default settings
+# Except for database settings, you need to include your own
+# ---------------------------------------------------------------------
+
 # Project setting
 TITLE=your_project_title
 DESCRIPTION=your_project_description
@@ -7,7 +13,7 @@ ROOT_PATH=your_root_path
 DOCS_URL=your_docs_url
 REDOC_URL=your_redoc_url
 
-# Database settings
+# * Database settings *
 DATABASE_URL=your_database_url
 
 # CORSMiddleware settings
