--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,23 +1,31 @@
 # ---------------------------------------------------------------------
 # This is the .env for the project.
-# You can comment on the line you want to use the default settings
+# You can uncomment on the line you want to use your settings
 # Except for database settings, you need to include your own
 # ---------------------------------------------------------------------
 
+# ------------------
 # Project setting
-TITLE=your_project_title
-DESCRIPTION=your_project_description
+# ------------------
+# TITLE=your_project_title
+# DESCRIPTION=your_project_description
 
+# ------------------
 # PATH settings
-ROOT_PATH=your_root_path
-DOCS_URL=your_docs_url
-REDOC_URL=your_redoc_url
+# ------------------
+# ROOT_PATH=your_root_path
+# DOCS_URL=your_docs_url
+# REDOC_URL=your_redoc_url
 
+# -----------------------
 # * Database settings *
+# -----------------------
 DATABASE_URL=your_database_url
 
+# --------------------------
 # CORSMiddleware settings
-CORS_ALLOW_ORIGINS=your_list_cors_allow_origins
-CORS_ALLOW_METHODS=your_list_cors_allow_methods
-CORS_ALLOW_HEADERS=your_list_cors_allow_headers
-CORS_ALLOW_CREDENTIALS=your_list_cors_allow_credentials
+# --------------------------
+# CORS_ALLOW_ORIGINS=your_list_cors_allow_origins
+# CORS_ALLOW_METHODS=your_list_cors_allow_methods
+# CORS_ALLOW_HEADERS=your_list_cors_allow_headers
+# CORS_ALLOW_CREDENTIALS=your_list_cors_allow_credentials
